# greek-news-nlp

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
analysis/: prototyping.ipynb  sentiment_eda.ipynb
api/: __init__.py  main.py
api/routers/: articles.py
core/db/: cli.py  config.py  loaders.py  session.py
core/db/migrations/: env.py  load_data.py
core/db/migrations/versions/: 97bebe0d4a5f_increase_stance_column_length.py
core/nlp/: stance_predictor.py
data_collection/: __init__.py  db_setup_cli.py  scraper_gazzetta.py  scraper_gazzetta_async.py
data_collection/db/: db_config.py  db_init.py  db_setup_cli.py  loaders.py  models.py
data_collection/migrations/: env.py  load_data.py
data_collection/migrations/versions/: 7a671aaf6adf_add_refereeing.py  847e2d6fc8c6_create_initial_tables.py  97bebe0d4a5f_increase_stance_column_length.py  bfd0941c3f7b_add_stance_predictions_table.py
data_collection/nlp/: stance_predictor.py
data_collection/predictions/: stance_predictor.py
frontend/: package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/theme/: index.ts
frontend/src/utils/: api.ts
notebooks/: prototyping.ipynb  sentiment_eda.ipynb
src/data_collection/: __init__.py
tests/: conftest.py  test_db_config.py  test_models.py  test_stance_predictor.py
tests/api/: test_main.py
