[project]
name = "data-collection"
version = "0.1.0"
description = "Scrapers for Greek news websites"
authors = [
    { name = "Alex Spanos", email = "10924953+alejio@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "typer>=0.15.1",
    "crawl4ai>=0.4.2",
    "playwright>=1.49.1"
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.9",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src/data_collection --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
select = ["E", "F", "I", "N"]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/data_collection"]
