[project]
name = "data-collection"
version = "0.1.0"
description = "Scrapers for Greek news websites"
authors = [
    { name = "Alex Spanos", email = "10924953+alejio@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "typer>=0.15.1",
    "crawl4ai>=0.4.2",
    "playwright>=1.49.1",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.37",
    "psycopg2-binary>=2.9.10",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.9",
    "pytest-mock>=3.12.0",
]

[project.scripts]
gazzetta-db = "data_collection.db.db_setup_cli:app"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
select = ["E", "F", "I", "N"]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["data_collection"]
