[project]
name = "greek-news-nlp"
version = "0.1.0"
description = "Scrapers for Greek news websites"
authors = [
    { name = "Alex Spanos", email = "10924953+alejio@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "typer>=0.15.1",
    "crawl4ai>=0.4.2",
    "playwright>=1.49.1",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.37",
    "psycopg2-binary>=2.9.10",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.9",
    "pytest-mock>=3.12.0",
]

[project.scripts]
gazzetta-db = "core.db.cli:app"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "analysis",
]

target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["data_collection", "core"]
